--- a/index.html
+++ b/index.html
@@ -5,19 +5,24 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>SAVAGE WEAR</title>
 	<!-- LINKEAR NUESTRO CSS -->
+	<link rel="stylesheet" href="../css/bootstrap.min.css">
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href="css/estilo.css">
 </head>
 <body>
-	<!-- inicio encabezado -->
-	<div class="contenedor-padre">
-<header class="header">
+	<div class="container">
+		<!-- HEADER LOGO + NAV -->
+		<div class="row">
+			<div class="col-lg-12 col-12">
+				<!-- inicio nav -->
+	<!-- ITEM HIJO DE HEADER -->
+	<nav>
+		<header class="header">
 	<!-- LOGO -->
 	<div class="header__logo"><a href="#"><img src="assets/img/donaldlogo.png" alt="logo"></a>
 	</div>
 	<!-- cierre logo -->
-	<!-- inicio nav -->
-	<!-- ITEM HIJO DE HEADER -->
-	<nav>
+</header>
 		<ul class="header__nav nav--background">
 	
 				<li class="nav__item nav__item--background"><a href="#"class="nav__item--color">HOME</a></li>
@@ -29,17 +34,50 @@
 	</nav>
 	<!-- lista con viñetas -->	
 	<!-- cierre nav -->
-</header>
-	<!-- cierre encabezado -->
-	<!-- inicio contenido -->
-<main class>
+			</div>
+		</div>
+		<!-- carousel -->
+		<div class="row">
+			<div class="col-lg-12 col-12">
+				<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="assets/img/QUIENESSOMOS.png" class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="assets/img/QUIENESSOMOS.png" class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="assets/img/QUIENESSOMOS.png" class="d-block w-100" alt="...">
+    </div>
+  </div>
+ <button class="carousel-control-prev" type="button" data-target="#carouselExampleControls" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </button>
+  <button class="carousel-control-next" type="button" data-target="#carouselExampleControls" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </button>
+</div>
+			</div>
+		</div>
+		<!-- ENCABEZADO -->
+		<div class="row">
+			<div class="col-lg-12 col-12">
+				<main class>
 	<!-- lista ordenada -->
 	<div class="encabezado">
 		<h1 class="encabezado">Welcome to Savage Drops </h1>
 		<p>	<iframe width="560" height="315" src="https://www.youtube.com/embed/qb4IiW7MpwM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> </p>
 	</div>
 	</main>
-		<div class="textos">
+			</div>
+		</div>
+		<!-- main section -->
+		<div class="row">
+			<div class="col-lg-6 col-12">
+				<div class="textos">
 			<section>
 				<article class="main-dos">
 					<h2>¿QUIENES SOMOS?</h2>
@@ -51,14 +89,21 @@
 				</article>
 			</section>	
 		</div>
-<!-- cierre contenido -->
-<!-- inicio footer -->
-<footer>
+			</div>
+			<div class="col-lg-6 col-12">
+				
+			</div>
+		</div>
+		<!-- footer -->
+	<div class="row">
+		<div class="col-lg-4 col-12">
 	<!-- LOGO -->
 	<div class="footerlogo">
 		<a href="#"><img src="assets/img/donaldlogo.png" alt="savage"></a>
 	</div>
-	<h3>REDES SOCIALES</h3>
+		</div>
+		<div class="col-lg-4 col-12">
+			<h3>REDES SOCIALES</h3>
 	<div class="rrss-foo">
 		<a href="https://www.instagram.com/savage.dropslp/">
 			<img src="assets/img/INSTAGRAM.jfif" alt="insta">
@@ -67,12 +112,26 @@
 			<img src="assets/img/facebook atr.png" alt="facebook">
 		</a>
 	</div>
-		<h3>CONTACTO</h3>
+		</div>
+		<div class="col-lg-4 col-12">
+			<h3>CONTACTO</h3>
 	<div class="contact">
 		<a href="https://mail.google.com/">
 			<img src="assets/img/phone.png"></a>
 		</div>
-	</footer>
+		</div>
+	</div>
+	</div>
+	<script src="../js/bootstrap.bundle.min.js"></script>
+	<!-- JS BOOTSTRAP -->
+	<script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-fQybjgWLrvvRgtW6bFlB7jaZrFsaBXjsOMm/tB9LTS58ONXgqbR9W8oWht/amnpF" crossorigin="anonymous"></script>
+	<!-- inicio encabezado -->
+	<div class="contenedor-padre">
+	<!-- cierre encabezado -->
+	<!-- inicio contenido -->
+<!-- cierre contenido -->
+<!-- inicio footer -->
 	</div>
 </body>
 <!-- cierre footer -->
